# apple_stock_price_prediction

./: main.py  pyproject.toml
notebooks/: test.ipynb
src/scripts/: build_model.py  download_data.py
src/training/: parameters.json
