[project]
name = "apple-stock-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastparquet>=2026.3.0",
    "mlflow-skinny>=3.12.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.11.0",
    "yfinance>=0.2.25",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[project.scripts]
download-update-data = "scripts.download_data:download_update_data"

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*", "training*", "scripts*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
